--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -11,6 +11,7 @@
   .bg-image {
     background-image: url("../../assets/images/bg_image.jpg");
     background-repeat: no-repeat;
+    background-position: top center;
     background-size: cover;
     height: 50vh;
     position: absolute;
