--- a/src/components/Controls/Controls.scss
+++ b/src/components/Controls/Controls.scss
@@ -34,6 +34,10 @@ section.controls {
     width: 270px;
     height: 279px;
 
+    @include mobile {
+      height: 170px;
+    }
+
     img {
       position: absolute;
       top: 0;
@@ -85,7 +89,6 @@ section.controls {
         background: color("accent");
         position: relative;
         top: -2px;
-        transition: all 1s linear;
       }
     }
   }
