--- a/src/components/Controls/Controls.scss
+++ b/src/components/Controls/Controls.scss
@@ -14,6 +14,11 @@ section.controls {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 $spacing;
+
+    a {
+      outline: none;
+      -webkit-tap-highlight-color: transparent;
+    }
   }
 
   .control-item {
